# cargo-competo

./: Cargo.toml  README.md  run
example-lib/: Cargo.toml
example-lib/src/: bit.rs  lib.rs  main.rs  monoid.rs  read_line.rs  read_words.rs
src/: config.rs  main.rs  project.rs
